Fix annoying pre overflow issue

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -31,6 +31,10 @@
   text-underline-offset: 17px;
 }
 
+.wrapper a:hover:first-of-type {
+  text-decoration: none;
+}
+
 .wrapper .mobile {
   position: fixed;
   background-color: black;
